# CodeWhale

./: Cargo.toml  README.ja-JP.md  README.md  README.zh-CN.md  config.example.toml
.github/workflows/: sync-cnb.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/secrets/src/: lib.rs
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: client.rs  config.rs  config_ui.rs  handoff.rs  hooks.rs  localization.rs  main.rs  mcp.rs  prompts.rs  session_manager.rs  settings.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: change.rs  config.rs  core.rs  hooks.rs  mod.rs
crates/tui/src/core/: engine.rs  turn.rs
crates/tui/src/prompts/: agent.txt  base.md  base.txt
crates/tui/src/repl/: runtime.rs
crates/tui/src/rlm/: prompt.rs
crates/tui/src/sandbox/: seatbelt.rs
crates/tui/src/snapshot/: mod.rs  repo.rs
crates/tui/src/tools/: file.rs  rlm.rs  shell.rs  spec.rs  web_search.rs
crates/tui/src/tui/: app.rs  footer_ui.rs  history.rs  keybindings.rs  markdown_render.rs  mod.rs  model_picker.rs  sidebar.rs  (+3 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  MODES.md
npm/deepseek-tui/scripts/: install.js
npm/deepseek-tui/test/: install.test.js  postinstall.test.js
scripts/release/: check-versions.sh
web/app/[locale]/: page.tsx
web/components/: footer.tsx
web/lib/: content-watch.ts  deepseek.ts  facts.generated.ts  github.ts
(+14 files in other folders)
